[Mac] Set tooltip for the app menu button

A tooltip for the app menu button is currently not displayed, although it is
defined in Toolbar.xib. In viewDidLoad: of ToolbarController, we replace the
app menu button from the xib with an AppToolbarButton instance for the material
design, so we need to explicitly set a tooltip for it again.

BUG=716749

Review-Url: https://codereview.chromium.org/2851063003
Cr-Commit-Position: refs/heads/master@{#468366}

Former-commit-id: d2bad93f4d4f3417ce867dcd5631983cb2e36534